tests/baselines/reference/nodeModulesResolveJsonModule(module=node18).errors.txt
error TS5070: Option '--resolveJsonModule' cannot be specified when 'moduleResolution' is set to 'classic'.
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
index.cts(2,25): error TS2339: Property 'name' does not exist on type 'string'.
index.cts(5,33): error TS2339: Property 'name' does not exist on type 'string'.
index.ts(2,25): error TS2339: Property 'name' does not exist on type 'string'.
index.ts(5,33): error TS2339: Property 'name' does not exist on type 'string'.


!!! error TS5070: Option '--resolveJsonModule' cannot be specified when 'moduleResolution' is set to 'classic'.
!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== index.ts (2 errors) ====
    import pkg from "./package.json" with { type: "json" };
    export const name = pkg.name;
                            ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
    import * as ns from "./package.json" with { type: "json" };
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.cts (2 errors) ====
    import pkg from "./package.json";
    export const name = pkg.name;
                            ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
    import * as ns from "./package.json";
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.mts (0 errors) ====
    import pkg from "./package.json" with { type: "json" };
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
    export const thing = ns;
    export const name2 = ns.default.name;
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }